--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -11,7 +11,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/WindowResources/MessageDicitionary.xaml"/>
+                <ResourceDictionary Source="/WindowResources/MessageDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <utility:TypeConverter x:Key="TypeConverter"/>
@@ -49,18 +49,20 @@
 
         <DockPanel Background="Yellow" LastChildFill="False">
             <Image  DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
-            <Button DockPanel.Dock="Right" Content="Add User" Margin="5" Command="{Binding Path=AddUserCommand}" Style="{StaticResource GroupButtons}"/>
-            <Button DockPanel.Dock="Right" Content="Remove User" Margin="5" Command="{Binding Path=RemoveUserCommand}" Style="{StaticResource GroupButtons}"/>
-            <Button DockPanel.Dock="Right" Content="Delete Chat" Margin="5" Command="{Binding Path=DeleteChatCommand}"/>
-            <Button DockPanel.Dock="Right" Content="Leave" Margin="5" Command="{Binding Path=LeaveChatCommand}"/>
+            <!--<Button DockPanel.Dock="Right" Content="Add User" Margin="5" Command="{Binding Path=AddUserCommand}" Style="{StaticResource GroupButtons}"/>-->
+            <!--<Button DockPanel.Dock="Right" Content="Remove User" Margin="5" Command="{Binding Path=RemoveUserCommand}" Style="{StaticResource GroupButtons}"/>-->
+            <!--<Button DockPanel.Dock="Right" Content="Delete Chat" Margin="5" Command="{Binding Path=DeleteChatCommand}"/>-->
+            <Button DockPanel.Dock="Right" Content="Edit chat" Margin="5" Command="{Binding EditChatCommand}"/>
+            <Button DockPanel.Dock="Right" Content="Leave" Margin="5" Command="{Binding LeaveChatCommand}"/>
         </DockPanel>
 
-        <Image Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0" Source="/Resources/loader.png" Visibility="{Binding Path=LoaderVisibility}" Width="50" Height="50">
+        <Image Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0" Source="/Resources/loader.png" Visibility="{Binding Path=LoaderVisibility}" Width="50" Height="50" Panel.ZIndex="1">
             <Image.RenderTransform>
                 <RotateTransform x:Name="rotate" Angle="0" CenterX="25" CenterY="25"/>
             </Image.RenderTransform>
             <Image.Style>
                 <Style TargetType="Image">
+                    <Setter Property="Visibility" Value="Hidden"/>
                     <Style.Triggers>
                         <Trigger Property="Visibility" Value="Visible">
                             <Trigger.EnterActions>
