--- a/Client/Views/UCChat.xaml
+++ b/Client/Views/UCChat.xaml
@@ -92,7 +92,7 @@
             </TextBox>
 
             <Button Grid.Column="1" Content="File" FontSize="20" Command="{Binding OpenFileCommand}"></Button>
-            <Button Grid.Column="2" Content="Smile" FontSize="20" Command="{Binding OpenSmileCommand}"></Button>
+            <Button Grid.Column="2" Content="Show" FontSize="20" Command="{Binding ShowMoreCommand}"></Button>
             <Button Grid.Column="3" Content="Send" FontSize="20" Command="{Binding SendCommand}"></Button>
         </Grid>
     </Grid>
