--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -6,6 +6,7 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:utility="clr-namespace:Client.Utility"
              xmlns:models="clr-namespace:Client.Models"
+             xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -42,8 +43,8 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" MaxHeight="100"/>
-            <RowDefinition Height="6*"/>
+            <RowDefinition Height="*" MaxHeight="80"/>
+            <RowDefinition Height="8*"/>
             <RowDefinition Height="*" MaxHeight="150"/>
         </Grid.RowDefinitions>
 
@@ -95,7 +96,7 @@
             </i:Interaction.Triggers>
         </ListView>
 
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" MaxHeight="100">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="8*"/>
                 <ColumnDefinition Width="*"/>
@@ -108,7 +109,7 @@
             <TextBox Text="{Binding MessageText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      Grid.Column="0"
                      Background="DarkSlateGray" Foreground="White" FontSize="30" TextWrapping="Wrap"
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <TextBox.InputBindings>
                     <KeyBinding Key="Enter" Command="{Binding TextBox_EnterPressedCommand}"/>
                 </TextBox.InputBindings>
@@ -122,7 +123,8 @@
                 </i:Interaction.Triggers>
             </TextBox>
 
-            <Button Grid.Column="1" Content="File" FontSize="20" Command="{Binding OpenFileCommand}"></Button>
+            <icons:PackIconMaterialDesign Grid.Column="1" Width="100" Height="100" Kind="AttachFile" Foreground="DarkGreen"/>
+            <!--<Button Grid.Column="1" Content="File" FontSize="20" Command="{Binding OpenFileCommand}"></Button>-->
             <Button Grid.Column="2" Content="Smile" FontSize="20" Command="{Binding OpenSmileCommand}"></Button>
             <Button Grid.Column="3" Content="Send" FontSize="20" Command="{Binding SendCommand}"></Button>
         </Grid>
