--- a/Client/Views/MainWindow.xaml
+++ b/Client/Views/MainWindow.xaml
@@ -6,8 +6,6 @@
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:icons ="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:controls ="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:uc="clr-namespace:Client.UserControls"
-        xmlns:utility="clr-namespace:Client.Utility"
         mc:Ignorable="d"
         Title="letsTalkWindow" Height="700" Width="1200" WindowStartupLocation="CenterScreen">
 
@@ -85,26 +83,32 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            
+
         </ResourceDictionary>
     </Window.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition x:Name="col1"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
+        <Button>
+            <Button.Background>
+                <ImageBrush/>
+            </Button.Background>
+        </Button>
+        
         <UserControl Grid.Column="1" Content="{Binding CurrentView}"/>
 
-        <controls:HamburgerMenu x:Name="hamburgerMenu"  PaneBackground="#ffff1a" PaneForeground="Gray"
+        <controls:HamburgerMenu x:Name="hamburgerMenu" PaneBackground="#ffff1a" PaneForeground="Gray"
                                  OptionsItemTemplate="{StaticResource HamburgerMenuOptionsTemplate}"
                                  OptionsItemContainerStyle="{StaticResource HamburgerOptionItemContainerStyle}"
                                  ItemContainerStyle="{StaticResource ChatListBoxItemStyle}"
                                  ItemTemplateSelector="{StaticResource ChatDataTemplateSelector}"
                                  ItemsSource="{Binding Path=Chats}"
                                  SelectedItem="{Binding Path=SelectedChat}"
-                                 IsPaneOpen="False">
+                                 IsPaneOpen="False" CompactPaneLength="55" OpenPaneLength="250" Width="250">
 
             <controls:HamburgerMenu.OptionsItemsSource>
                 <controls:HamburgerMenuItemCollection>
@@ -120,7 +124,7 @@
                             <icons:PackIconMaterial  Kind="AccountMultiplePlus" Width="25" Height="25" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                         </controls:HamburgerMenuIconItem.Icon>
                     </controls:HamburgerMenuIconItem>
-                    
+
                     <controls:HamburgerMenuIconItem Tag="UCAddUser" Label="Add User" Command="{Binding AddUserCommand}">
                         <controls:HamburgerMenuIconItem.Icon>
                             <icons:PackIconMaterial  Kind="AccountPlus" Width="25" Height="25" VerticalAlignment="Center" HorizontalAlignment="Left"/>
