--- a/Client/WindowResources/MessageDictionary.xaml
+++ b/Client/WindowResources/MessageDictionary.xaml
@@ -145,6 +145,7 @@
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
                 <Setter TargetName="group" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SystemMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.ColumnSpan" Value="2"/>
@@ -230,6 +231,7 @@
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
                 <Setter TargetName="group" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
         </DataTemplate.Triggers>
     </DataTemplate>
@@ -309,6 +311,7 @@
                 <Setter TargetName="group" Property="Visibility" Value="Visible"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
+                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
 
             <DataTrigger Binding="{Binding Path=Message.IsLoaded}" Value="True">
@@ -426,6 +429,7 @@
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
                 <Setter TargetName="group" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SessionSendedMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
