--- a/Client/Views/MainWindow.xaml
+++ b/Client/Views/MainWindow.xaml
@@ -93,13 +93,7 @@
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
-        <Button>
-            <Button.Background>
-                <ImageBrush/>
-            </Button.Background>
-        </Button>
-        
-        <UserControl Grid.Column="1" Content="{Binding CurrentView}"/>
+        <UserControl x:Name="uc" Grid.Column="1" Content="{Binding CurrentView}"/>
 
         <controls:HamburgerMenu x:Name="hamburgerMenu" PaneBackground="#ffff1a" PaneForeground="Gray"
                                  OptionsItemTemplate="{StaticResource HamburgerMenuOptionsTemplate}"
@@ -108,7 +102,9 @@
                                  ItemTemplateSelector="{StaticResource ChatDataTemplateSelector}"
                                  ItemsSource="{Binding Path=Chats}"
                                  SelectedItem="{Binding Path=SelectedChat}"
-                                 IsPaneOpen="False" CompactPaneLength="55" OpenPaneLength="250" Width="250">
+                                 IsPaneOpen="False" CompactPaneLength="55" OpenPaneLength="250" Width="250"
+                                 ItemClick="hamburgerMenu_ItemClick"
+                                 OptionsItemClick="hamburgerMenu_OptionsItemClick">
 
             <controls:HamburgerMenu.OptionsItemsSource>
                 <controls:HamburgerMenuItemCollection>
