--- a/Client/WindowResources/MessageDictionary.xaml
+++ b/Client/WindowResources/MessageDictionary.xaml
@@ -98,13 +98,15 @@
                 <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
                     <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                            <ImageBrush ImageSource="{Binding Path=User.Image}"/>
                         </Ellipse.Fill>
                     </Ellipse>
                     <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
                 </Grid>
 
-                <TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>
+                <Border x:Name="groupBorder" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" CornerRadius="10" Background="#add4db" BorderBrush="White" BorderThickness="1" Visibility="Hidden" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock x:Name="groupText" Text="{Binding Path=User.Name}" FontSize="15" Foreground="Black" FontWeight="DemiBold" Padding="10,0,10,0"/>
+                </Border>
 
                 <Border x:Name="border" Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" BorderBrush="AliceBlue" BorderThickness="3" CornerRadius="15" Margin="10,20,0,0">
                     <Grid>
@@ -144,8 +146,8 @@
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
-                <Setter TargetName="group" Property="Visibility" Value="Visible"/>
-                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
+                <Setter TargetName="groupBorder" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="groupText" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SystemMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.ColumnSpan" Value="2"/>
@@ -177,13 +179,17 @@
                 <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
                     <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                            <ImageBrush ImageSource="{Binding Path=User.Image}"/>
                         </Ellipse.Fill>
                     </Ellipse>
                     <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
                 </Grid>
 
-                <TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>
+                <Border x:Name="groupBorder" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" CornerRadius="10" Background="#add4db" BorderBrush="White" BorderThickness="1" Visibility="Hidden" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock x:Name="groupText" Text="{Binding Path=User.Name}" FontSize="15" Foreground="Black" FontWeight="DemiBold" Padding="10,0,10,0"/>
+                </Border>
+                
+                <!--<TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>-->
 
                 <Border x:Name="border" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="10,20,0,0" HorizontalAlignment="Left" MaxHeight="300" MaxWidth="300" Width="{Binding ElementName=border, Path=Height}" BorderBrush="AliceBlue" BorderThickness="3">
                     <Grid>
@@ -230,8 +236,8 @@
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
-                <Setter TargetName="group" Property="Visibility" Value="Visible"/>
-                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
+                <Setter TargetName="groupBorder" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="groupText" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
         </DataTemplate.Triggers>
     </DataTemplate>
@@ -256,13 +262,17 @@
                 <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
                     <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                            <ImageBrush ImageSource="{Binding Path=User.Image}"/>
                         </Ellipse.Fill>
                     </Ellipse>
                     <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
                 </Grid>
 
-                <TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>
+                <Border x:Name="groupBorder" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" CornerRadius="10" Background="#add4db" BorderBrush="White" BorderThickness="1" Visibility="Hidden" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock x:Name="groupText" Text="{Binding Path=User.Name}" FontSize="15" Foreground="Black" FontWeight="DemiBold" Padding="10,0,10,0"/>
+                </Border>
+                
+                <!--<TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>-->
 
                 <Border x:Name="border" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="5,20,0,0" MinWidth="250" Height="60" BorderBrush="AliceBlue" BorderThickness="3" CornerRadius="15">
                     <Grid>
@@ -308,10 +318,10 @@
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
-                <Setter TargetName="group" Property="Visibility" Value="Visible"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
-                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
+                <Setter TargetName="groupBorder" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="groupText" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
 
             <DataTrigger Binding="{Binding Path=Message.IsLoaded}" Value="True">
@@ -365,13 +375,17 @@
                 <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
                     <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                            <ImageBrush ImageSource="{Binding Path=User.Image}"/>
                         </Ellipse.Fill>
                     </Ellipse>
                     <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
                 </Grid>
 
-                <TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>
+                <Border x:Name="groupBorder" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" CornerRadius="10" Background="#add4db" BorderBrush="White" BorderThickness="1" Visibility="Hidden" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <TextBlock x:Name="groupText" Text="{Binding Path=User.Name}" FontSize="15" Foreground="Black" FontWeight="DemiBold" Padding="10,0,10,0"/>
+                </Border>
+                
+                <!--<TextBlock x:Name="group" Text="{Binding Path=User.Name}" Grid.Row="0" Grid.Column="1" Margin="15,0,0,0" Visibility="Hidden" FontSize="15" Foreground="Green" FontWeight="DemiBold"/>-->
 
                 <Border x:Name="border" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="5,20,0,0" MinWidth="250" Width="250" Height="65" BorderBrush="AliceBlue" BorderThickness="3" CornerRadius="15">
                     <Grid>
@@ -428,8 +442,8 @@
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
-                <Setter TargetName="group" Property="Visibility" Value="Visible"/>
-                <Setter TargetName="group" Property="Foreground" Value="{Binding Path=Color}"/>
+                <Setter TargetName="groupBorder" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="groupText" Property="Foreground" Value="{Binding Path=Color}"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SessionSendedMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
